--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "@devraelfreeze/discordjs-pagination": "^2.7.6",
+    "cron": "^3.1.7",
     "discord.js": "^14.0.0",
     "discord.js-minesweeper": "^1.0.6",
     "dotenv": "^8.2.0",
