--- a/package.json
+++ b/package.json
@@ -4,20 +4,22 @@
   "description": "Bot made specifically for the Elite Server",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Shadowblazer93",
   "license": "ISC",
+  "engines": {
+    "node": ">=16.9.0"
+  },
   "dependencies": {
     "@devraelfreeze/discordjs-pagination": "^2.7.6",
     "discord.js": "^14.0.0",
     "discord.js-minesweeper": "^1.0.6",
     "dotenv": "^8.2.0",
-    "i": "^0.3.7",
     "mathjs": "^7.6.0",
     "moment": "^2.29.2",
     "ms": "^2.1.2",
-    "npm": "^8.3.0",
     "pg": "^8.7.1",
     "salvage.db": "^1.2.2",
     "weather-js": "^2.0.0",
